# scope

./: .gitattributes  .gitignore  MANIFEST.in  README.md  README_NEW.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  python-publish.yml
apps/analysis/: detections.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/analysis/detection_rules/: aws_rules.yaml  azure_rules.yaml
apps/analysis/migrations/: 0001_initial.py
apps/aws/: urls.py  utils.py  views.py
apps/azure/: admin.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
apps/case/: views.py
apps/data/: admin.py  models.py  urls.py  views.py
apps/gcp/: forms.py  models.py  tasks.py  urls.py  utils.py  views.py
requirements/: dev-requirements.txt  requirements.in  requirements.txt
scope/: __init__.py  cli.py  urls.py
scope/common/: timeline.py  utils.py
src/scope/: cli.py
src/scope/aws/: collector.py  (+2 more)
templates/analysis/: case_detections.html  detection_confirm_delete.html  detection_form.html  detection_list.html
templates/aws/: account_resources.html  connect_aws.html  credential_details.html  edit_account.html  fetch_cloudtrail_logs.html  get_logs.html  logsource_details.html  resource_details.html
templates/azure/: account_resources.html  connect_azure.html  edit_account.html  get_logs.html  logsource_details.html  resource_details.html
templates/case/: case_detail.html  connect_client.html  create_case.html  edit_case.html
templates/data/: normalized_logs.html
templates/gcp/: account_resources.html  connect_gcp.html  edit_account.html  logsource_details.html  resource_details.html
templates/web/: app_home.html
(+10 files in other folders)
