[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scope"
version = "0.1.0"
description = "Scope is an Open Source Cloud Forensics tool for AWS. Scope can rapidly obtains logs and creates super timelines for analysis."
readme = "README.md"
authors = [
    {name = "Scope", email = "scopeforensics@protonmail.com"},
]
license = {text = "Apache 2.0s"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "boto3>=1.24.0",
    "botocore>=1.27.0",
]

[project.urls]
"Homepage" = "https://github.com/scope-forensics/scope"
"Bug Tracker" = "https://github.com/scope-forensics/scope/issues" 