[build-system]
requires = ["setuptools>=42", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scope-forensics"
version = "0.1.1"
description = "Scope is an Open Source Cloud Forensics tool for AWS. Scope can rapidly obtains logs and creates super timelines for analysis."
readme = "README.md"
authors = [
    {name = "Scope", email = "scopeforensics@protonmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "boto3>=1.24.0",
    "botocore>=1.27.0",
]

[project.urls]
"Homepage" = "https://github.com/scope-forensics/scope"
"Bug Tracker" = "https://github.com/scope-forensics/scope/issues" 